[package]
name = "ubuntu-ami"
version = "0.1.0"
authors = ["Akshay Narayan <akshayn@mit.edu>"]
edition = "2018"

description = "Scrape cloud-images.ubuntu.com for AMI ids." 

documentation = "https://docs.rs/ubuntu-ami"
homepage = "https://github.com/akshayknarayan/ubuntu-ami"
repository = "https://github.com/akshayknarayan/ubuntu-ami.git"

keywords = ["ec2", "aws", "vm"]
categories = []

license = "MIT OR Apache-2.0"

[badges]
maintenance = { status = "passively-maintained" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.10"
serde = "1"
serde_json = "1"
anyhow = "1"

[dev-dependencies]
tokio = { version = "0.2", features = ["full"] }
