[package]
name = "ubuntu-ami"
version = "0.2.0"
authors = ["Akshay Narayan <akshayn@mit.edu>"]
edition = "2018"

description = "Scrape cloud-images.ubuntu.com for AMI ids." 
readme = "README.md"
documentation = "https://docs.rs/ubuntu-ami"
homepage = "https://github.com/akshayknarayan/ubuntu-ami"
repository = "https://github.com/akshayknarayan/ubuntu-ami.git"

keywords = ["ec2", "aws", "vm"]
categories = []

license = "MIT OR Apache-2.0"

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
reqwest = "0.11"
serde = "1"
serde_json = "1"
anyhow = "1"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
